[PRJ0001] refactor pom.xml