@@ -14,7 +14,6 @@
 		<module>flight-web</module>
 	</modules>
 
-
 	<packaging>pom</packaging>
 
 	<properties>
@@ -24,6 +23,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<springboot.version>3.3.2</springboot.version>
+		<spring-boot-maven-plugin.version>3.2.2</spring-boot-maven-plugin.version>
 		<commons-lang3.version>3.12.0</commons-lang3.version>
 		<tsid-creator.version>5.2.5</tsid-creator.version>
 		<boostrap.version>5.3.3</boostrap.version>
@@ -84,32 +84,51 @@
 		</dependency>
 	</dependencies>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-				<version>${springboot.version}</version>
-				<configuration>
-					<excludes>
-						<exclude>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok</artifactId>
-						</exclude>
-					</excludes>
-				</configuration>
-			</plugin>
+	<repositories>
+		<!-- for use icu -->
+		<repository>
+			<id>jitpack.io</id>
+			<url>https://jitpack.io</url>
+		</repository>
+	</repositories>
 
+
+
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-maven-plugin</artifactId>
+					<version>${spring-boot-maven-plugin.version}</version>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+
+		<plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+				<version>3.13.0</version>
                 <configuration>
                     <source>${maven.compiler.source}</source>
                     <target>${maven.compiler.target}</target>
-					<enablePreview>true</enablePreview>
-					<compilerArgs>-Xlint:all</compilerArgs>
-				</configuration>
+                    <compilerArgs>
+						<arg>-Xlint:all</arg>
+						<rg>-parameters</rg>
+						<arg>--enable-preview</arg>
+					</compilerArgs>
+                </configuration>
             </plugin>
-        </plugins>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.5.2</version>
+				<configuration>
+					<argLine>--enable-preview</argLine>
+				</configuration>
+			</plugin>
+		</plugins>
 	</build>
 </project>
